--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
 
         <div class="form" id="form">
           <div class="left">
-              <input type="text" />
+              <input type="text" placeholder="Name"/>
             <input type="email" placeholder="Email" />
             <textarea name="" id="" placeholder="Message"></textarea>
             <div class="btn2">Send Message</div>
