--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
       <!-- <div></div> -->
     </div>
 
+
+    <div onclick="scrollToTop()" class="scroll-top" >
+     Top ^
+    </div>
     <!-- Header -->
     <div class="main" id="home">
       <ul class="circles" id="circles">
@@ -443,6 +447,15 @@
           </div>
         </div>
       </div>
+
+      <footer>
+        <div class="footer">
+          Copyright © 2024 · Created with ❤️️ by RASYA
+        </div>
+        <img src="/Assets/svg.png" alt="">
+      </footer>
+   
+
     </div>
 
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
@@ -450,6 +463,12 @@
 
 
     <script src="/index.js"></script>
+    <script>
+      function scrollToTop(){
+  window.scrollTo(0,0);
+}
+
+    </script>
    
   </body>
 </html>
