--- a/index.html
+++ b/index.html
@@ -19,10 +19,7 @@
   </head>
   <body>
     <div class="loader">
-
-
     </div>
-
 
     <div onclick="scrollToTop()" class="scroll-top">Top ^</div>
     <!-- Header -->
@@ -90,7 +87,9 @@
 
       <div class="jumbotron">
         <div class="kanan" id="text2">
-          <img src="/Assets/poto.png" alt="" />
+          <div class="blob">
+          <!-- <img src="/Assets/rasya.png" alt="" /> -->
+          </div>
         </div>
         <div class="kiri">
           <h1 id="text1">Rasya Rui Costa</h1>
@@ -261,7 +260,7 @@
         <div class="card-main" id="project">
           <div class="card-project">
             <div class="card-img">
-              <img src="/Assets/sosmed.png" alt="" />
+              <img src="/Assets/Frame 1 (4).png" alt="" />
             </div>
             <p class="title">SocialCaa</p>
             <a href="https://socialcaa.netlify.app" target="_blank">
@@ -270,7 +269,7 @@
           </div>
           <div class="card-project">
             <div class="card-img">
-              <img src="/Assets/moiseum.png" alt="" />
+              <img src="/Assets/Frame 1 (2).png" alt="" />
             </div>
             <p class="title">Website Muesum Digital</p>
             <a href="https://moiseum-static.netlify.app/" target="_blank">
@@ -306,6 +305,22 @@
             </div>
             <p class="title">Website Pinjaman Online</p>
             <button class="btn">Private Project</button>
+          </div>
+          <div class="card-project">
+            <div class="card-img">
+              <img src="/Assets/Frame 1 (1).png" alt="" />
+            </div>
+            <p class="title">YouPlan-app</p>
+            <button class="btn">Preview Not Available</button>
+          </div>
+          <div class="card-project">
+            <div class="card-img">
+              <img src="/Assets/Frame 1 (3).png" alt="" />
+            </div>
+            <p class="title">Intech</p>
+            <a href="https://intech-c4.netlify.app/" target="_blank">
+            <button class="btn">Open Website</button>
+            </a>
           </div>
         </div>
         <svg
