--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
               <img src="/Assets/Frame 1 (1).png" alt="" />
             </div>
             <p class="title">YouPlan-app</p>
-            <a href="https://github.com/rasyarui/YouPlan-app">
+            <a href="https://github.com/rasyarui/YouPlan-app" target="_blank">
               <button class="btn">Open in Github</button>
             </a>
           </div>
