--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <div class="jumbotron">
         <div class="kanan" id="text2">
           <div class="blob">
-            <!-- <img src="/Assets/rasya.png" alt="" /> -->
+            <img src="/Assets/rasya.png" alt="" />
           </div>
         </div>
         <div class="kiri">
