--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
   <body>
     <div class="loader"></div>
 
+    <div class="progress_bar">
+
+    </div>
+
     <div onclick="scrollToTop()" class="scroll-top">Top ^</div>
     <!-- Header -->
     <div class="main" id="home">
@@ -493,6 +497,7 @@
 
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <!-- <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script> -->
+
 
     <script src="/index.js"></script>
     <script>
